Some fixing and little changes

--- a/index.css
+++ b/index.css
@@ -2,16 +2,18 @@ body {
     background-color: rgb(32, 30, 68);
     text-align: center;
     align-items: center;
+    overflow: hidden;
 }
 
 .search--field{
     margin: auto;
     margin-top: 20rem;
     background-color: rgb(43, 39, 100);
-    width: 40rem;
+    width: 45rem;
+    height: 10rem;
     display: flex;
     flex-direction: column;
-    padding: 10px;
+    padding: 15px;
     padding-top: 0;
     text-align: left;
     border-radius: 10px;
@@ -32,11 +34,45 @@ h1{
     border-radius: 10px;
     font: 'Roboto Condensed';
     font-size: 2rem;
-    padding: 5px;
     text-align: center;
+    padding: 10px 1px;
 }
-.sbtn {
-    height: 30px;
+.btn {
+    background-color: #EA4C89;
+    border-radius: 8px;
+    border-style: none;
+    box-sizing: border-box;
+    color: #FFFFFF;
+    cursor: pointer;
+    display: inline-block;
+    font-family: "Haas Grot Text R Web", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 14px;
+    font-weight: 500;
+    height: 40px;
+    line-height: 20px;
+    list-style: none;
+    margin: 0;
+    outline: none;
+    padding: 10px 16px;
+    position: relative;
+    text-align: center;
+    text-decoration: none;
+    transition: color 100ms;
+    vertical-align: baseline;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    margin: 5px;
+    padding-top: 14px;
+    margin-bottom: 1000px !important;
+}
+
+.btn p {
+    margin: auto;
+}
+.btn:hover,
+.btn:focus {
+  background-color: #F082AC;
 }
 
 .resulting-search {
